# RP-Repozitar

./: 14g3e.txt  16g3e.txt  i3.txt  i5.txt  i7.txt  pg.txt  s18c4.txt  s20c4.txt  s22c4.txt  s24c4.txt  s26c4.txt  s28c4.txt
RP_Input-Grafy/: i9.txt
RP_Program/: BacktrackPsi.cpp  BacktrackPsi.h  CMakeLists.txt  CubicGraph.cpp  CubicGraph.h  GraphExceptions.cpp  GraphExceptions.h  GraphList.cpp  GraphList.h  GraphLoader.cpp  GraphLoader.h  PsiFunction.h  ReccursiveFactorPsi.cpp  ReccursiveFactorPsi.h  main.cpp
RP_Vysledky/: 10g3ePSI.txt  12g3ePSI.txt  14g3ePSI.txt  16g3ePSI.txt  4g3ePSI.txt  6g3ePSI.txt  8g3ePSI.txt  i3PSI.txt  i5PSI.txt  i7PSI.txt  i9PSI.txt  pgPSI.txt  s18c4PSI.txt  s20c4PSI.txt  s22c4PSI.txt  s24c4PSI.txt  s26c4PSI.txt
